Updated HTML File for Wireframe

--- a/index.html
+++ b/index.html
@@ -6,32 +6,19 @@
 		<title>HW WireFrame</title>
     	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-	<header>
-		<h1> Student BIO</h1>
-	</header>
-
-	<div class="container">
-
-		<section id="main-bio">
-
-		<h2>Julie Burk</h2>
-  		<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/045/1b2/2978a08.jpg" alt="Julie Burk" id="bio-image">
-
-    		<p>Innovative manager with extensive experience in civic engagement and volunteerism. A practiced non-profit professional and strategist skilled in successfully navigating organizations through times of fiscal and participatory growth. Known as a natural leader and communicator continually focused on building relationships, utilizing effective program evaluation and fund development strategies to drive positive change. Currently augmenting skills with coding and web development program through UC Berkeley.
-    		</p>
-   		 </section>
 	
-		<section id="contact-info">
+			<div id="main">header</div>
+			<div id="main">nav</div>
 
-    	<h2>Contact Info</h2>
-    		<ul>
-        		<li><strong>Email: julieburk@gmail.com</strong><a href="julieburk@gmail.com"></a></li>
-        		<li><strong>Github: coming soon</strong><a href="#"></a></li>
-        		<li><strong>Portfolio: coming soon</strong><a href="#"></a></li>
-    		</ul>
-    	</section>
-    </div>
+			<div id="section">section</div>
+			<div id="aside">aside</div>
+			<div id="article">article</div>
+			<div id="h1-h2-h3"><strong>h1, h2, h3</strong></div>
+			<div id="p">p</div>
+
+			<div id="footer">footer</div>
 
 </body>
 </html>
